2011-11-15  Albert Chu <chu11@llnl.gov>

	* Support IPMI_FLAGS_NOSESSION in libfreeipmi.

	* libfreeipmi/include/freeipmi/record-format/ipmi-platform-event-trap-record-format.h:
	Support macros for sequence number.
	
2011-11-15  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/ipmi-pet.8.pre.in: Add examples.

2011-11-15  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl: Support various new features.
	
2011-11-14  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Update documentation.

	* libfreeipmi/src/api/ipmi-lan-session-common.c: Code cleanup.
	
2011-11-14  Kaiwang Chen <kaiwang.chen@gmail.com>

	* Add contrib/pet/petalert.pl script from Kaiwang
	Chen (kaiwang.chen AT gmail DOT com).
	
2011-11-14  Albert Chu <chu11@llnl.gov>

	* Support Supermicro X9SCM-F IANA change.
	
2011-11-08  Albert Chu <chu11@llnl.gov>

	* Support Supermicro X9SCA-F-O OEM sensors.

2011-11-08  Albert Chu <chu11@llnl.gov>

	Merge branch ipmipet.

	* ipmi-pet/: New tool.

	* libfreeipmi/include/freeipmi/record-format/ipmi-platform-event-trap-record-format.h:
	New file.

	* common/src/toolcommon/: Update tool common function appropriately for new tool.

	* common/src/toolsensor/tool-sensor-common.h,
	common/src/toolsensor/tool-sensor-common.c (calculate_column_widths_ignored_sdr_cache,
	get_entity_id_string): New functions.

	* common/src/toolsdr/tool-sdr-cache-common.h,
	common/src/toolsdr/tool-sdr-cache-common.c (ipmi_sdr_cache_search_sensor_wrapper):
	Write new common function.

	* common/src/toolevent/: New common library.

	* ipmi-sel/: Update to use new convenience functions.

2011-11-01  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw.c: Code cleanup.  Output line numbers when
	there is an error on file/stdin input.
	
2011-10-31  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel.c (_normal_output_date_and_time)
	(_normal_output_not_available_date_and_time): Split into date and
	time specific functions.  Adjust other code appropriately.
	