@@ -19,6 +19,9 @@ could be called directly from such a daemon, typically a script is called
 to parse the SNMP daemon's output and convert it into a form that can be input
 into
 .B ipmi-pet.
+On some systems, you may wish to also send a PET acknowledge to a
+remote system to inform it the trap was received and parsed.  One can
+be sent using the \fB\-\-pet-acknowledge\fR option.
 
 While an IPMI session is not required to interpret a PET, data from
 the sensor data repository (SDR) is required to properly interpret
@@ -81,6 +84,14 @@ information than verbose output.  Most notably it will output
 additional hex codes to given information on ambiguous events.  For
 example, it will output Generator ID hex codes for sensors without
 names.
+.TP
+\fB\-\-pet-acknowledge\fR
+Send PET acknowledge using inputted trap data instead of outputting
+data.  In some circumstances, this may be useful to inform a remote
+system that a trap was received and parsed.  If specified, a hostname
+must be specified via \fI\-h\fR or \fI\-\-hostname\fR to inform
+.B ipmi-pet
+where to send the acknowledge to.
 .TP
 \fB\-\-file\fR=\fICMD\-FILE\fR
 Specify a file to read PET specific trap and variable bindings hex
@@ -155,6 +166,10 @@ Interpret a PET using a remote SDR cache.
 Interpret a PET using a previously stored SDR cache.
 .PP
 .B # ipmi-pet 356224 0x44 0x45 0x4c 0x4c 0x50 0x00 0x10 0x59 0x80 0x43 0xb2 0xc0 0x4f 0x33 0x33 0x58 0x00 0x02 0x19 0xe8 0x7e 0x26 0xff 0xff 0x20 0x20 0x04 0x20 0x73 0x18 0x00 0x80 0x01 0xff 0x00 0x00 0x00 0x00 0x00 0x19 0x00 0x00 0x02 0xa2 0x01 0x00 0xc1 --sdr-cache-file=/tmp/mysdrcache
+.PP
+Instead of outputting trap interpretation, send a PET acknowledge using the trap data.
+.PP
+.B # ipmi-pet --pet-acknowledge 356224 0x44 0x45 0x4c 0x4c 0x50 0x00 0x10 0x59 0x80 0x43 0xb2 0xc0 0x4f 0x33 0x33 0x58 0x00 0x02 0x19 0xe8 0x7e 0x26 0xff 0xff 0x20 0x20 0x04 0x20 0x73 0x18 0x00 0x80 0x01 0xff 0x00 0x00 0x00 0x00 0x00 0x19 0x00 0x00 0x02 0xa2 0x01 0x00 0xc1
 #include <@top_srcdir@/common/man/manpage-common-reporting-bugs.man>
 .SH "COPYRIGHT"
 Copyright \(co 2011 FreeIPMI Core Team
